--- a/main.css
+++ b/main.css
@@ -9,11 +9,9 @@
   user-select: none;
   outline: none;
 }
-
 html, body {
   height: 100%;
 }
-
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
@@ -23,71 +21,136 @@ body {
   height: 100%;
   margin: 0;
 }
-
 .container {
   background-color: #fff;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   border-radius: 0.5rem;
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.1);
-  width: 300px; /* Defina a largura desejada para o container */
+  width: 400px; /******/
+  height: 270px;
 }
-
 h1 {
-  color: #333;
-}
-
-.output {
-  margin-top: 1rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 700;
+  /*
+  text-shadow:
+  -1px -1px 0 #333,
+  1px -1px 0 #757575,
+  -1px 1px 0 #757575,
+  1px 1px 0 #757575;
+  */
 }
 
 #qualSemana, #quantosDias, #anoBisexto {
   font-size: 0.7rem;
   color: #555;
 }
-
-form {
-  margin-top: 1.5rem;
-}
-
-button {
-  background-color: #007BFF;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.3rem;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
 .destaque {
   font-weight: 700;
 }
 
 /* Adiciona estilo ao input do tipo date */
 input[type="date"] {
-  padding: 0.5rem;
+  padding: 0.3rem;
   border: 1px solid #ddd;
   border-radius: 0.3rem;
+}
+label, input {
+  cursor: pointer;
+}
+/* Estilizando o botão do calendário no campo de entrada de data */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  /*background-image: url(calendario-1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 16px; 
+  height: 16px;
+  opacity: 0.7;*/
+  cursor: pointer;
 }
 
 /* Estilo para os botões de seta */
 button[type="button"] {
-  font-size: 1.2rem;
-  margin-right: 0.5rem;
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
-
+button:hover[type="button"]  {
+  background-color: #2ab300;
+}
+.desligado[type="button"]  {
+  background-color: #d1d1d1;
+  user-select: none;
+  cursor: initial;
+}
+.desligado:hover[type="button"]  {
+  background-color: #d1d1d1;
+}
 .mostrar {
   display: flex;
 }
 .esconder {
   display: none;
 }
+.formulario {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 4rem;
+  position: relative;
+}
+.formulario > * {
+  font-size: 0.9rem;
+}
+.formulario > :nth-child(1){
+  position: absolute;
+  left: 0.5rem;
+  font-size: 1rem;
+}
+.formulario > :nth-child(2){
+  position: absolute;
+  left: 3.2rem;
+  font-size: 1rem;
+}
+.formulario > :nth-child(3){
+  position: absolute;
+  left: 12.8rem;
+  padding: 0.5rem 1rem;
+}
+.formulario > :nth-child(4){
+  position: absolute;
+  left: 12.8rem;
+  padding: 0.6rem 1.1rem;
+}
+.formulario > :nth-child(5){
+  position: absolute;
+  left: 16.3rem;
+  padding: 0.6rem 1.1rem;
+}
+.outPut {
+  list-style: none;
+  padding: 0rem 0rem 0rem 2rem;
+}
 
-.desligado {
-  background-color: #d1d1d1;
+.secao-dois {
+  display: flex;
+  flex-direction: row;
+  padding-left: 0.7rem;
+}
+figure {
+  width: 4rem; /* Defina a largura desejada para o figure */
+  height: 4rem; /* Defina a altura desejada para o figure */
+  overflow: hidden; /* Certifica-se de que qualquer conteúdo extra seja ocultado */
+}
+
+figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
