--- a/main.css
+++ b/main.css
@@ -100,7 +100,6 @@ button:hover[type="button"]  {
   margin-top: 1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 4rem;
   position: relative;
@@ -109,33 +108,39 @@ button:hover[type="button"]  {
   font-size: 0.9rem;
 }
 .formulario > :nth-child(1){
-  position: absolute;
-  left: 0.5rem;
+  /*position: absolute;
+  left: 0.5rem;*/
   font-size: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.4rem;
 }
 .formulario > :nth-child(2){
-  position: absolute;
-  left: 3.2rem;
+  /*position: absolute;
+  left: 3.2rem;*/
   font-size: 1rem;
+  margin-right: 0.4rem;
 }
 .formulario > :nth-child(3){
-  position: absolute;
-  left: 12.8rem;
+  /*position: absolute;
+  left: 12.8rem;*/
   padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
 }
 .formulario > :nth-child(4){
-  position: absolute;
-  left: 12.8rem;
+  /*position: absolute;
+  left: 12.8rem;*/
   padding: 0.6rem 1.1rem;
+  margin-right: 0.4rem;
 }
 .formulario > :nth-child(5){
-  position: absolute;
-  left: 16.3rem;
+  /*position: absolute;
+  left: 16.3rem;*/
   padding: 0.6rem 1.1rem;
+
 }
 .outPut {
   list-style: none;
-  padding: 0rem 0rem 0rem 2rem;
+  padding: 0rem 0rem 0rem 1.5rem;
 }
 
 .secao-dois {
@@ -144,8 +149,8 @@ button:hover[type="button"]  {
   padding-left: 0.7rem;
 }
 figure {
-  width: 4rem; /* Defina a largura desejada para o figure */
-  height: 4rem; /* Defina a altura desejada para o figure */
+  width: 3rem; /* Defina a largura desejada para o figure */
+  height: 3rem; /* Defina a altura desejada para o figure */
   overflow: hidden; /* Certifica-se de que qualquer conteúdo extra seja ocultado */
 }
 
